# guinea-pig

./: .env  .gitignore  .travis.yml  Cargo.toml  Procfile  README.md  Rocket.toml  db.sqlite  plant_data.db  rust-toolchain
migrations/2019-03-13-094012_create_palm_logs/: down.sql  up.sql
migrations/2019-03-13-132316_create_achievements/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
templates/: base.html.tera  index.html.tera  peer.html.tera
