[package]
name = "guinea-pig"
version = "0.1.0"
authors = ["michoy <michael.hoyer3@gmail.com>"]
edition = "2019"

[dependencies]
rocket = "0.4.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["tera_templates"]

[dependencies.rusqlite]
version = "0.16.0"
features = ["bundled"]
